--- a/pom.xml
+++ b/pom.xml
@@ -154,6 +154,15 @@
 			<artifactId>appconfigdata</artifactId>
 			<version>${aws.java.sdk.version}</version>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-security</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-test</artifactId>
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
 
 	<build>
