updated code changes to use mappers instead of patchable object

--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,7 @@
 		<java.version>17</java.version>
 		<aws.java.sdk.version>2.27.21</aws.java.sdk.version>
 		<debezium.version>3.0.0.Final</debezium.version>
+		<org.mapstruct.version>1.7.0.Beta1</org.mapstruct.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -154,7 +155,7 @@
 			<artifactId>appconfigdata</artifactId>
 			<version>${aws.java.sdk.version}</version>
 		</dependency>
-		<dependency>
+		<!--<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-security</artifactId>
 		</dependency>
@@ -162,6 +163,11 @@
 			<groupId>org.springframework.security</groupId>
 			<artifactId>spring-security-test</artifactId>
 			<scope>test</scope>
+		</dependency>-->
+		<dependency>
+			<groupId>org.mapstruct</groupId>
+			<artifactId>mapstruct</artifactId>
+			<version>${org.mapstruct.version}</version>
 		</dependency>
 	</dependencies>
 
@@ -176,7 +182,21 @@
 							<groupId>org.projectlombok</groupId>
 							<artifactId>lombok</artifactId>
 						</path>
+						<path>
+							<groupId>org.projectlombok</groupId>
+							<artifactId>lombok-mapstruct-binding</artifactId>
+							<version>0.2.0</version>
+						</path>
+						<path>
+							<groupId>org.mapstruct</groupId>
+							<artifactId>mapstruct-processor</artifactId>
+							<version>${org.mapstruct.version}</version>
+						</path>
 					</annotationProcessorPaths>
+					<compilerArgs>
+						<arg>-Amapstruct.suppressGeneratorTimestamp=true</arg>
+						<arg>-Amapstruct.defaultComponentModel=spring</arg>
+					</compilerArgs>
 				</configuration>
 			</plugin>
 			<plugin>
